# fastapi_crud_demo

./: .gitignore  Dockerfile  NOTES.md  READEME.md  docker-compose.example.yml  pyproject.toml
src/app/: main.py
src/app/api/: __init__.py
src/app/api/v1/: __init__.py  api.py
src/app/api/v1/endpoints/: __init__.py  category.py  knowledge.py
src/app/core/: config.py
src/app/crud/: __init__.py  category.py  knowledge.py
src/app/db/: session.py
src/app/models/: __init__.py  category.py  knowledge.py
src/app/schemas/: __init__.py  category.py  knowledge.py
